--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "npm-nexus",
+  "name": "npm-nexus-greeting",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
